# just-bet

./: Cargo.toml  Coin-Flip.sol
src/: CoinFlip.rs  NumberHelper.rs  backend.rs  counter.rs  main.rs
