[package]
name = "just-bet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Specify the target as a library crate
[lib]
name = "just_bet"
path = "src/NumberHelper.rs"  # Adjust the path to your Rust file

# Specify the crate as a binary
[[bin]]
name = "counter"
path = "src/counter.rs"  # Adjust the path to your Rust file

[[bin]]
name = "CoinFlip"
path = "src/CoinFlip.rs"  # Adjust the path to your Rust file


[dependencies]
near-sdk = "3.0.1"
borsh = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"